# iic3964-backend

./: .bandit  .coderabbit-simple.yaml  .coderabbit.yaml  .dockerignore  .env.test  .flake8  .gitignore  .pre-commit-config.yaml  CODERABBIT_SETUP.md  Dockerfile  GITHUB_RULESETS.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  fly.toml  github-ruleset-release.json  github-ruleset.json  pyproject.toml  pytest.ini
.coderabbit/: ignore  project.md  rules.md
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml  fly-deploy.yml  security.yml
app/: main.py
app/IA/: gamini.py  prompts.py
app/api/v1/: api.py
app/api/v1/endpoints/: auth.py  clinical_attentions.py  doctors.py  gemini.py  health.py  insurance_company.py  items.py  metrics.py  patients.py  users.py
app/core/: config.py  constants.py  database.py  supabase_client.py
app/models/: item.py  user.py
app/schemas/: clinical_attention.py  gemini.py  insurance_company.py  item.py  metric.py  patient.py  user.py
app/services/: clinical_attention_service.py  doctor_service.py  insurance_company_service.py  metric_service.py  patient_service.py  user_service.py
app/services/IA/: ai_task.py  gemini.py  gemini_txt.py  prompts.py  prompts_txt.py
scripts/: dev.sh  docker.sh
tests/: conftest.py  test_auth_endpoints.py  test_clinical_attention_service.py  test_clinical_attentions_endpoints.py  test_doctor_service.py  test_doctors_endpoints.py  test_health.py  test_insurance_company_endpoints.py  test_items.py  test_main.py  test_metric_service.py  test_metrics_endpoints.py  test_patient_service.py  test_patients_endpoints.py  test_user_service.py  test_users_endpoints.py
tests/fixtures/: data_fixtures.py  supabase_mock.py
